Fixed bug with site banner. Site banner and it's contained elements do not misbehave when the browser width is too small. Instead, horizontal scrolling and element overflowing is allowed to keep a good display of the elements.

--- a/views/content/style/comments.css
+++ b/views/content/style/comments.css
@@ -76,7 +76,7 @@ COMMENTS SECTION
 	display: none;
 	background-color: #1f1f1f;
 	padding: 15px;
-	width: 85vw;
+	width: 100%;
 }
 
 .container .comments #theComments .morerepliesbtn {
